--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,10 +46,13 @@ jobs:
       - name: Install Heroku CLI
         run: curl https://cli-assets.heroku.com/install.sh | sh
 
+      - name: Authenticate with Heroku
+        run: echo "$HEROKU_API_KEY" | heroku auth:token
+
+      - name: Set up the Heroku remote
+        run: heroku git:remote -a dh-learning-management-system
+
       - name: Deploy to Heroku
+        run: git push heroku main
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: |
-          heroku auth:token
-          heroku git:remote -a dh-learning-management-system
-          git push heroku main
