--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,5 +54,9 @@ jobs:
       - name: Set up the Heroku remote
         run: heroku git:remote -a dh-learning-management-system
 
+      - name: Verify the remote setup
+        run: git remote -v
+
       - name: Deploy to Heroku
         run: git push heroku main
+
