--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ asgiref==3.8.1
 dj-database-url==2.2.0
 Django==5.0.7
 django-allauth==64.0.0
+gunicorn==23.0.0
 sqlparse==0.5.1
 whitenoise==6.7.0
-psycopg2-binary>=2.9.1
-gunicorn
